src/style/components/DetailCards.scss
#flexCardContainer {
  @media (max-width: 767px) {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-evenly;
    flex-direction: row;
    max-width: 710px;
    margin: 0 auto;

    ion-card {
      flex: 1 1 auto;
      min-width: 310px;
      max-width: 480px;
      margin: 10px 10px 18px;
      border-left: 1px solid var(--fat-card-border);
      border-right: 1px solid var(--fat-card-border);


      &.animate-in {
        @keyframes slide-in {
          0% {
              opacity: 0;
              transform: translateX(-40px);
          }
          100% {
              opacity: 1;
              transform: translateX(0);
          }
        }
        animation: slide-in 0.4s ease;
      }

      &.final-card {
        order: 100;
      }
      ion-card-header  {
        background-color: var(--fat-card-header-bg);
        padding: 6px 15px;
        border-radius: 4px 4px 0 0;


        ion-card-title {
          &.ios {	
            font-size: 15px;
          }
          &.md {			
            font-size: 17px;
          }
          color: var(--fat-card-header-contrast);
        }
      }

      ion-card-content {
        background-color: var(--fat-card-bg);
        padding: 0px;

        ul {
          margin: 0;
          padding: 0px 6px;
          li {
            color: var(--fat-card-p);
            font-size: 16px;
            list-style: none;
            border-bottom: 1px solid var(--fat-card-border);
            padding: 10px;
            line-height: 21px;

            &:last-child {
              border-bottom: none;
            }
          }
        }

        ion-button {
          margin: 0;
          padding: 5px 0;
          color: var(--fat-markdown-b);
          font-weight: 800;
        }

        .row {
          display: flex;
          text-align: center;
          justify-content: space-evenly;
          border-bottom: 1px solid var(--fat-card-border);

          .col {
            flex: 1 1 auto;
            border-right: 1px solid var(--fat-card-border);
            color: var(--fat-card-p);
            line-height: 17px;
            padding: 4px 0;

            h2 {
              margin: 0;
              font-size: 15px;
              font-weight: bold;
              color: var(--fat-card-p);
            }
            p {
              margin: 0;
              font-size: 15px;
              color: var(--fat-card-p);
            }
            
            &.triggered-data {
              h2 {color: var(--fat-vtrigger);}
            }

            &:last-child {
              border-right:none
            }
          }
        }

        &.fail-warning {
          text-align: center;
          padding: 10px;
          color: var(--fat-card-p	);

          h1 {
            color: var(--fat-card-header-contrast);
          }
          code {
            padding: 2px 7px;
          }

          p {
            margin-top: 10px;
          }
        }
      }
    }
  }

  @media (min-width: 768px) {
    display: flex;
    flex-direction: column;
    width: 85%;
    max-width: 840px;
    margin: 0px auto 15px;

    ion-card {
      margin: 10px;

      &.final-card {
        order: 100;
      }
      ion-card-header  {
        background: var(--fat-card-header-bg);
        padding: 8px 11px;
        ion-card-title {
          color: var(--fat-card-header-contrast);
          font-size: 17px;
        }
      }

      ion-card-content {
        display: flex;
        background-color: var(--fat-card-bg);
	    	padding: 10px 0;

        ul {
          width: 100%;
          margin: 0 15px;
          padding: 0;
          color: var(--fat-card-p);

          li {
            font-size: 16px;
            list-style: none;
            border-bottom: 1px solid var(--fat-card-border);
            padding: 10px;
            line-height: 21px;

            &:last-child {
              border-bottom: none;
            }
          }
        }

        .row {
          display: contents;
          &:last-child :last-of-type {
              border: none;
          }
          

          .col {
            flex: 1 0 auto;
            text-align: center;
              border-right: 1px solid var(--fat-frame-data-sub-header-stats-border);

              

            h2 {
              margin: 0;
              font-size: 15px;
              font-weight: bold;
              color: var(--fat-frame-data-sub-header-stats-contrast);
            }
            p {
              margin: 0;
              font-size: 15px;
              color: var(--fat-card-p);
            }
            
            &.triggered-data {
              h2 {color: var(--fat-vtrigger);}
            }
          }
        }
      }
    }
  }
}

